Commit for Label change in view1

--- a/webapp/view/View1.view.xml
+++ b/webapp/view/View1.view.xml
@@ -3,7 +3,7 @@
 	<App>
 		<pages>
 			<Page title="{i18n>title}">
-				<content><Label text="Test Project" /></content>
+				<content><Label text="Test Project new" /></content>
 			</Page>
 		</pages>
 	</App>
