--- a/webapp/view/View2.view.xml
+++ b/webapp/view/View2.view.xml
@@ -3,7 +3,7 @@
 	<App>
 		<pages>
 			<Page title="{i18n>title}">
-				<content><Label text="Test Project view2" /></content>
+				<content><Label text="Test Project view2 enhancement" /></content>
 			</Page>
 		</pages>
 	</App>
